<package format="2">
  <name>diff_drive_controller</name>
  <version>0.15.0</version>
  <description>Controller for a differential drive mobile base.</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>roslint</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>boost</depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>control_toolbox</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rqt_plot</test_depend>

  <export>
    <controller_interface plugin="${prefix}/diff_drive_controller_plugins.xml"/>
  </export>
</package>
